--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
    "outputs": [
@@ -25,10 +25,10 @@
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "ADMISSIONS = pd.read_csv(r\"C:\\BIOE5860_Data\\ADMISSIONS.csv\")\n",
-    "DIAGNOSES_ICD = pd.read_csv(r\"C:\\BIOE5860_Data\\DIAGNOSES_ICD.csv\")\n",
-    "PATIENTS = pd.read_csv(r\"C:\\BIOE5860_Data\\PATIENTS.csv\")\n",
-    "PROCEDURES_ICD = pd.read_csv(r\"C:\\BIOE5860_Data\\PROCEDURES_ICD.csv\")\n",
+    "ADMISSIONS = pd.read_csv(r\"ADMISSIONS.csv\")\n",
+    "DIAGNOSES_ICD = pd.read_csv(r\"DIAGNOSES_ICD.csv\")\n",
+    "PATIENTS = pd.read_csv(r\"PATIENTS.csv\")\n",
+    "PROCEDURES_ICD = pd.read_csv(r\"PROCEDURES_ICD.csv\")\n",
     "\n",
     "#Input ICD9 code that you want to look at here:\n",
     "my_icd9_code = [\"44100\", \"44101\", \"44102\", \"44103\"] #441 is arotic dissection. Change to 421 for bacterial endocarditis\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
    "outputs": [
@@ -223,14 +223,14 @@
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(378, 20)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(58440, 20)\n"
      ]
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [
@@ -261,8 +261,8 @@
    ],
    "source": [
     "chunksize = 50000\n",
-    "LAB_EVENTS = pd.read_csv(r\"C:\\BIOE5860_Data\\LABEVENTS.csv\",chunksize=chunksize)\n",
-    "LAB_IDS = pd.read_csv(r\"C:\\BIOE5860_Data\\Lab_Item_Codes.txt\", sep=\"\\t\")\n",
+    "LAB_EVENTS = pd.read_csv(r\"LABEVENTS.csv\",chunksize=chunksize)\n",
+    "LAB_IDS = pd.read_csv(r\"Lab_Item_Codes.txt\", sep=\"\\t\")\n",
     "\n",
     "PATIENT_LAB_EVENTS2 = []\n",
     "CONTROL_LAB_EVENTS2 = []\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "id": "74a02418",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "id": "944292af",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "id": "373a8875-2261-4d82-84ac-923810f87831",
    "metadata": {},
    "outputs": [
@@ -424,15 +424,15 @@
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'PATIENT_ADMISSION_INDEX'],\n",
-      "      dtype='object')\n",
-      "(378, 21)\n",
+      "      dtype='str')\n",
+      "(35, 21)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'ADMISSION_INDEX_PER_PATIENT'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(58440, 21)\n"
      ]
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "id": "92392489",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "id": "3e968bda",
    "metadata": {},
    "outputs": [
@@ -476,15 +476,15 @@
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'PATIENT_ADMISSION_INDEX'],\n",
-      "      dtype='object')\n",
-      "(378, 21)\n",
+      "      dtype='str')\n",
+      "(35, 21)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'ADMISSION_INDEX_PER_PATIENT'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(58440, 21)\n"
      ]
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "id": "28fed8a4",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Patient admissions: 378\n",
+      "Patient admissions: 35\n",
       "Control admissions: 58440\n"
      ]
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "id": "e50e98a0",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of unique patients with more than one admission: 29\n"
+      "Number of unique patients with more than one admission: 5\n"
      ]
     }
    ],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "id": "49bcc376",
    "metadata": {},
    "outputs": [
@@ -711,19 +711,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "id": "929f3830",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Patient subjects: 343\n",
-      "Control subjects (all): 46160\n",
-      "Imbalance ratio: 1:134\n",
-      "Diagnosis items (3 per code, freq >= 10): 8583\n",
-      "Procedure items (3 per code, freq >= 10): 2529\n"
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 361. KiB for an array with shape (46160,) and data type uint64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mMemoryError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 27\u001b[39m\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Build diagnosis DFs\u001b[39;00m\n\u001b[32m     26\u001b[39m patient_diag_df = temporal_rows_to_df(patient_diag_rows, \u001b[33m'\u001b[39m\u001b[33mDIAG\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m control_diag_df = \u001b[43mtemporal_rows_to_df\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontrol_diag_rows\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDIAG\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Build procedure DFs\u001b[39;00m\n\u001b[32m     30\u001b[39m patient_proc_df = temporal_rows_to_df(patient_proc_rows, \u001b[33m'\u001b[39m\u001b[33mPROC\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mtemporal_rows_to_df\u001b[39m\u001b[34m(rows, prefix)\u001b[39m\n\u001b[32m     11\u001b[39m         rec[\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mc\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_first_idx\u001b[39m\u001b[33m'\u001b[39m] = idx\n\u001b[32m     12\u001b[39m     records.append(rec)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrecords\u001b[49m\u001b[43m)\u001b[49m.set_index(\u001b[33m'\u001b[39m\u001b[33mSUBJECT_ID\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Fill NaN for _ever and _at_dx columns with 0\u001b[39;00m\n\u001b[32m     17\u001b[39m ever_cols = [c \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m df.columns \u001b[38;5;28;01mif\u001b[39;00m c.endswith(\u001b[33m'\u001b[39m\u001b[33m_ever\u001b[39m\u001b[33m'\u001b[39m)]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\kappl\\AppData\\Local\\Programs\\Python\\Python314\\Lib\\site-packages\\pandas\\core\\frame.py:837\u001b[39m, in \u001b[36mDataFrame.__init__\u001b[39m\u001b[34m(self, data, index, columns, dtype, copy)\u001b[39m\n\u001b[32m    835\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m columns \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    836\u001b[39m         columns = ensure_index(columns)\n\u001b[32m--> \u001b[39m\u001b[32m837\u001b[39m     arrays, columns, index = \u001b[43mnested_data_to_arrays\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    838\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# error: Argument 3 to \"nested_data_to_arrays\" has incompatible\u001b[39;49;00m\n\u001b[32m    839\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# type \"Optional[Collection[Any]]\"; expected \"Optional[Index]\"\u001b[39;49;00m\n\u001b[32m    840\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    841\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    842\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# type: ignore[arg-type]\u001b[39;49;00m\n\u001b[32m    843\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    844\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    845\u001b[39m     mgr = arrays_to_mgr(\n\u001b[32m    846\u001b[39m         arrays,\n\u001b[32m    847\u001b[39m         columns,\n\u001b[32m    848\u001b[39m         index,\n\u001b[32m    849\u001b[39m         dtype=dtype,\n\u001b[32m    850\u001b[39m     )\n\u001b[32m    851\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\kappl\\AppData\\Local\\Programs\\Python\\Python314\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:464\u001b[39m, in \u001b[36mnested_data_to_arrays\u001b[39m\u001b[34m(data, columns, index, dtype)\u001b[39m\n\u001b[32m    461\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_named_tuple(data[\u001b[32m0\u001b[39m]) \u001b[38;5;129;01mand\u001b[39;00m columns \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    462\u001b[39m     columns = ensure_index(data[\u001b[32m0\u001b[39m]._fields)\n\u001b[32m--> \u001b[39m\u001b[32m464\u001b[39m arrays, columns = \u001b[43mto_arrays\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    465\u001b[39m columns = ensure_index(columns)\n\u001b[32m    467\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\kappl\\AppData\\Local\\Programs\\Python\\Python314\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:789\u001b[39m, in \u001b[36mto_arrays\u001b[39m\u001b[34m(data, columns, dtype)\u001b[39m\n\u001b[32m    786\u001b[39m     data = [\u001b[38;5;28mtuple\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m data]\n\u001b[32m    787\u001b[39m     arr = _list_to_arrays(data)\n\u001b[32m--> \u001b[39m\u001b[32m789\u001b[39m content, columns = \u001b[43m_finalize_columns_and_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    790\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m content, columns\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\kappl\\AppData\\Local\\Programs\\Python\\Python314\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:889\u001b[39m, in \u001b[36m_finalize_columns_and_data\u001b[39m\u001b[34m(content, columns, dtype)\u001b[39m\n\u001b[32m    886\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(err) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m    888\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m contents \u001b[38;5;129;01mand\u001b[39;00m contents[\u001b[32m0\u001b[39m].dtype == np.object_:\n\u001b[32m--> \u001b[39m\u001b[32m889\u001b[39m     contents = \u001b[43mconvert_object_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontents\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    891\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m contents, columns\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\kappl\\AppData\\Local\\Programs\\Python\\Python314\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:1025\u001b[39m, in \u001b[36mconvert_object_array\u001b[39m\u001b[34m(content, dtype, dtype_backend, coerce_float)\u001b[39m\n\u001b[32m   1021\u001b[39m             arr = maybe_cast_to_datetime(arr, dtype)\n\u001b[32m   1023\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m arr\n\u001b[32m-> \u001b[39m\u001b[32m1025\u001b[39m arrays = [\u001b[43mconvert\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m arr \u001b[38;5;129;01min\u001b[39;00m content]\n\u001b[32m   1027\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m arrays\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\kappl\\AppData\\Local\\Programs\\Python\\Python314\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:976\u001b[39m, in \u001b[36mconvert_object_array.<locals>.convert\u001b[39m\u001b[34m(arr)\u001b[39m\n\u001b[32m    972\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dtype != np.dtype(\u001b[33m\"\u001b[39m\u001b[33mO\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    973\u001b[39m     \u001b[38;5;66;03m# e.g. if dtype is UInt32 then we want to cast Nones to NA instead of\u001b[39;00m\n\u001b[32m    974\u001b[39m     \u001b[38;5;66;03m#  NaN in maybe_convert_objects.\u001b[39;00m\n\u001b[32m    975\u001b[39m     to_nullable = dtype_backend != \u001b[33m\"\u001b[39m\u001b[33mnumpy\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(dtype, BaseMaskedDtype)\n\u001b[32m--> \u001b[39m\u001b[32m976\u001b[39m     arr = \u001b[43mlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmaybe_convert_objects\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    977\u001b[39m \u001b[43m        \u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    978\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtry_float\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcoerce_float\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    979\u001b[39m \u001b[43m        \u001b[49m\u001b[43mconvert_to_nullable_dtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mto_nullable\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    980\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    981\u001b[39m     \u001b[38;5;66;03m# Notes on cases that get here 2023-02-15\u001b[39;00m\n\u001b[32m    982\u001b[39m     \u001b[38;5;66;03m# 1) we DO get here when arr is all Timestamps and dtype=None\u001b[39;00m\n\u001b[32m    983\u001b[39m     \u001b[38;5;66;03m# 2) disabling this doesn't break the world, so this must be\u001b[39;00m\n\u001b[32m    984\u001b[39m     \u001b[38;5;66;03m#    getting caught at a higher level\u001b[39;00m\n\u001b[32m    985\u001b[39m     \u001b[38;5;66;03m# 3) passing convert_non_numeric to maybe_convert_objects get this right\u001b[39;00m\n\u001b[32m    986\u001b[39m     \u001b[38;5;66;03m# 4) convert_non_numeric?\u001b[39;00m\n\u001b[32m    988\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/lib.pyx:2632\u001b[39m, in \u001b[36mpandas._libs.lib.maybe_convert_objects\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mMemoryError\u001b[39m: Unable to allocate 361. KiB for an array with shape (46160,) and data type uint64"
      ]
     }
    ],
@@ -808,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "2bbf0e81",
    "metadata": {},
    "outputs": [
@@ -904,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "c6044b07",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "967d2f02",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "e0ec67f4",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "16c8a3ea",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "555f5353",
    "metadata": {},
    "outputs": [
@@ -13171,7 +13179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
