Updated .gitignore to include all of the files from main plus thenew ones made here. Also updated pre-processing to align with main

--- a/Train_Models.ipynb
+++ b/Train_Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "088c7b25",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Load the feature matrix\n",
-    "df = pd.read_parquet(r\"C:\\BIOE5860_Data\\MODEL_READY_MATRIX.parquet\")\n",
+    "df = pd.read_parquet(r\"MODEL_READY_MATRIX.parquet\")\n",
     "\n",
     "print(f\"Loaded matrix: {df.shape}\")\n",
     "print(f\"  Label=1 (AD): {(df['LABEL']==1).sum()}\")\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cfd6dbbe",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
     "ax.set_title(f'Top {TOP_N} Features — Decision Tree', fontsize=14, fontweight='bold')\n",
     "ax.tick_params(axis='y', labelsize=8)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(r\"C:\\BIOE5860_Data\\DT_Top50_Features.png\", dpi=150, bbox_inches='tight')\n",
+    "plt.savefig(r\"DT_Top50_Features.png\", dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"Saved: DT_Top50_Features.png\")"
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "004c4929",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
     "ax.set_title(f'Top {TOP_N} Features — Lasso (L1 Logistic Regression)', fontsize=14, fontweight='bold')\n",
     "ax.tick_params(axis='y', labelsize=8)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(r\"C:\\BIOE5860_Data\\Lasso_Top50_Features.png\", dpi=150, bbox_inches='tight')\n",
+    "plt.savefig(r\"Lasso_Top50_Features.png\", dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"Saved: Lasso_Top50_Features.png\")"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3679488f",
    "metadata": {},
    "outputs": [
@@ -353,10 +353,10 @@
     "\n",
     "# Export full importance rankings\n",
     "dt_importance_df.to_csv(\n",
-    "    r\"C:\\BIOE5860_Data\\DT_Feature_Importances.csv\", index=False\n",
+    "    r\"DT_Feature_Importances.csv\", index=False\n",
     ")\n",
     "lasso_importance_df.to_csv(\n",
-    "    r\"C:\\BIOE5860_Data\\Lasso_Feature_Importances.csv\", index=False\n",
+    "    r\"Lasso_Feature_Importances.csv\", index=False\n",
     ")\n",
     "\n",
     "print(\"\\nSaved full importance rankings as CSV.\")"
