--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -277,14 +277,16 @@
     "# for bacterial endocarditis:\n",
     "'''\n",
     "labs_of_interest = [\n",
-    "    'WBC', 'WHITE BLOOD', 'NEUTROPHIL', 'LYMPHOCYTE', 'BAND',\n",
-    "    'HEMOGLOBIN', 'HEMATOCRIT', 'PLATELET',\n",
-    "    'C-REACTIVE', 'PROCALCITONIN', 'SED RATE', 'SEDIMENTATION', 'ESR',\n",
-    "    'LACTATE', 'LDH', 'LACTATE DEHYDROGENASE',\n",
-    "    'CREATININE', 'BUN', 'UREA',\n",
-    "    'BILIRUBIN', 'AST', 'ALT', 'ALBUMIN',\n",
-    "    'CULTURE', 'BLOOD CULTURE',\n",
-    "    'COMPLEMENT', 'C3', 'C4',\n",
+    "    'WBC', 'WHITE BLOOD', 'NEUTROPHIL', 'LYMPHOCYTE', 'BANDs#',\n",
+    "    'Hgb', 'Hemoglobin', 'HEMATOCRIT','Hematocrit, Calculated', 'PLATELET Count',\n",
+    "    'C-REACTIVE PROTEIN', 'Sedimentation Rate',\n",
+    "    'LACTATE', 'LDH', 'LACTATE DEHYDROGENASE (LD)',\n",
+    "    'CREATININE', 'Creatinine, Blood', 'Creatinine, Whole Blood', 'Creatinine, Serum',\n",
+    "    'BUN', 'UREA NITROGEN',\n",
+    "    'BILIRUBIN', 'Bilirubin, Direct', 'Bilirubin, Indirect', 'Bilirubin, Total',\n",
+    "    'AST', 'Asparate Aminotransferase (AST)', 'Asparate Aminotransferase', \n",
+    "    'ALT', 'Alanine Aminotransferase (ALT)', 'Alanine Aminotransferase', 'ALBUMIN', '(ALBUMIN)', '<ALBUMIN>',\n",
+    "    'C3', 'C4',\n",
     "    'RHEUMATOID FACTOR',\n",
     "]\n",
     "'''\n",
