--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [
@@ -273,6 +273,23 @@
     "    'BILIRUBIN', 'AST', 'ALT', \n",
     "    'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL'\n",
     "]\n",
+    "\n",
+    "# for bacterial endocarditis:\n",
+    "'''\n",
+    "labs_of_interest = [\n",
+    "    'WBC', 'WHITE BLOOD', 'NEUTROPHIL', 'LYMPHOCYTE', 'BANDs#',\n",
+    "    'Hgb', 'Hemoglobin', 'HEMATOCRIT','Hematocrit, Calculated', 'PLATELET Count',\n",
+    "    'C-REACTIVE PROTEIN', 'Sedimentation Rate',\n",
+    "    'LACTATE', 'LDH', 'LACTATE DEHYDROGENASE (LD)',\n",
+    "    'CREATININE', 'Creatinine, Blood', 'Creatinine, Whole Blood', 'Creatinine, Serum',\n",
+    "    'BUN', 'UREA NITROGEN',\n",
+    "    'BILIRUBIN', 'Bilirubin, Direct', 'Bilirubin, Indirect', 'Bilirubin, Total',\n",
+    "    'AST', 'Asparate Aminotransferase (AST)', 'Asparate Aminotransferase', \n",
+    "    'ALT', 'Alanine Aminotransferase (ALT)', 'Alanine Aminotransferase', 'ALBUMIN', '(ALBUMIN)', '<ALBUMIN>',\n",
+    "    'C3', 'C4',\n",
+    "    'RHEUMATOID FACTOR',\n",
+    "]\n",
+    "'''\n",
     "\n",
     "#create one large string which the string matcher will search through\n",
     "pattern = '|'.join(labs_of_interest)\n",
