--- a/Train_Models.ipynb
+++ b/Train_Models.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5ddfc881",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
    "source": [
     "# Lasso needs scaled features for proper regularization\n",
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_scaled = scaler.fit_transform(X) #kept as X since it's not sparse and we need to scale it for Lasso\n",
     "\n",
     "lasso = LogisticRegression(\n",
     "    penalty='l1',\n",
